@@ -76,6 +76,7 @@ export(pqsRate2sProb)
 export(probAnc)
 export(qsProb2Comp)
 export(qsRate2Comp)
+export(resolveTreeChar)
 export(reverseList)
 export(rootSplit)
 export(sProb2sRate)
