@@ -6,9 +6,10 @@
 \title{Estimating the Minimum Number of Character Transitions Using Maximum Parsimony}
 \usage{
 minCharChange(trait, tree, randomMax = 10000, maxParsimony = TRUE,
-  ordered = FALSE, type = "MPR", cost = NULL, printMinResult = TRUE)
+  orderedChar = FALSE, type = "MPR", cost = NULL, printMinResult = TRUE)
 
-ancPropStateMat(trait, tree, ordered = FALSE, type = "MPR", cost = NULL)
+ancPropStateMat(trait, tree, orderedChar = FALSE, type = "MPR",
+  cost = NULL)
 }
 \arguments{
 \item{trait}{A vector of trait values for a discrete character, preferably named with taxon names
@@ -28,10 +29,10 @@ been solutions not examined with a lower number of transitions even if maxParsim
 one may want to do maxParsimony=FALSE if one is interested in whether there are solutions with a
 smaller number of gains or losses and thus wants to return all solutions.}
 
-\item{ordered}{If TRUE (not the default), then the character will be reconstructed with a cost (step)
+\item{orderedChar}{If TRUE (not the default), then the character will be reconstructed with a cost (step)
 matrix of a linear, ordered character. This is not applicable if type=ACCTRAN, as cost matrices cannot
-be used with ACCTRAN in \code{ancestral.pars}, and an error will be returned if ordered=TRUE but
-a cost matrix is given, as the only reason to use ordered is to produce a cost matrix automatically.}
+be used with ACCTRAN in \code{ancestral.pars}, and an error will be returned if orderedChar=TRUE but
+a cost matrix is given, as the only reason to use orderedChar is to produce a cost matrix automatically.}
 
 \item{type}{The parsimony algorithm applied by \code{ancestral.pars}, which can apply one of two:
 "MPR" (the default) is a relatively fast algorithm developed by Hamazawa et al. (1995) and Narushima
@@ -92,22 +93,24 @@ The wrapper function \code{ancPropStateMat} simply automates the application of 
 \code{ancestral.pars} and \code{phyDat} from \code{phangorn}, along with several additional checks
 and code to present the result as a matrix, rather than a specialized list.
 
-Note that although the default \code{cost} argument assumes that multistate characters are unordered,
-the results of character change will be reported as gains and losses relative to the numbering of the
+Note that although the default \code{orderedChar} argument assumes that multistate characters are unordered,
+the results of character change will always be reported as gains and losses relative to the numbering of the
 states in the output \code{transitionSumChanges}, exactly as if they had been ordered. In the case
 where the character is actually ordered, this may be
 considered a conservative approach, as using a parsimony algorithm for unordered character states allows fewer
 gains or losses to be counted on branches where multiple gains and losses are reported. If the character is
-presumably unordered, however, then the gains and losses division is arbitrary nonsense and should be combined to
+presumably unordered \emph{and multistate}, however, then the gains and losses division
+is \emph{arbitrary nonsense} and should be combined to
 to obtain the total number of character changes.
 }
 \examples{
 # let's write a quick & dirty ancestral trait plotting function
 
-quickAncPlot<-function(tree,ancData,cex){
+quickAncPlotter<-function(tree,ancData,cex){
 	ancCol<-(1:ncol(ancData))+1
 	plot(tree,show.tip.label=FALSE,no.margin=TRUE,direction="upwards")
-	tiplabels(pch=16,pie=ancData[(1:Ntip(tree)),],cex=cex,piecol=ancCol)
+	tiplabels(pch=16,pie=ancData[(1:Ntip(tree)),],cex=cex,piecol=ancCol,
+		col=0)
 	nodelabels(pie=ancData[-(1:Ntip(tree)),],cex=cex,piecol=ancCol)
 	}
 
@@ -122,10 +125,10 @@ ancACCTRAN<-ancPropStateMat(retioTree, trait=retioChar[,2], type="ACCTRAN")
 
 #let's compare MPR versus ACCTRAN results
 layout(1:2)
-quickAncPlot(retioTree,ancMPR,cex=0.5)
-text(x=8,y=15,"type='MPR'",cex=1.5)
-quickAncPlot(retioTree,ancACCTRAN,cex=0.5)
-text(x=9,y=15,"type='ACCTRAN'",cex=1.5)
+quickAncPlotter(retioTree,ancMPR,cex=0.5)
+text(x=4,y=5,"type='MPR'",cex=1.5)
+quickAncPlotter(retioTree,ancACCTRAN,cex=0.5)
+text(x=5,y=5,"type='ACCTRAN'",cex=1.5)
 
 minCharChange(retioTree,trait=retioChar[,2],type="MPR")
 minCharChange(retioTree,trait=retioChar[,2],type="ACCTRAN")
@@ -144,23 +147,24 @@ ancMPR<-ancPropStateMat(tree, trait=char, type="MPR")
 #unordered, ACCTRAN
 ancACCTRAN<-ancPropStateMat(tree, trait=char, type="ACCTRAN")
 #ordered, MPR
-ancMPRord<-ancPropStateMat(tree, trait=char, ordered=TRUE, type="MPR")
+ancMPRord<-ancPropStateMat(tree, trait=char, orderedChar=TRUE, type="MPR")
 
 #let's compare MPR versus ACCTRAN results
 layout(1:2)
-quickAncPlot(tree,ancMPR,cex=0.3)
+quickAncPlotter(tree,ancMPR,cex=0.3)
 text(x=8,y=15,"type='MPR'",cex=1.5)
-quickAncPlot(tree,ancACCTRAN,cex=0.3)
+quickAncPlotter(tree,ancACCTRAN,cex=0.3)
 text(x=9,y=15,"type='ACCTRAN'",cex=1.5)
 #MPR has much more uncertainty in node estimates
 	#but that doesn't mean ACCTRAN is preferable
 
 #let's compare unordered versus ordered under MPR
 layout(1:2)
-quickAncPlot(tree,ancMPR,cex=0.3)
-text(x=8,y=15,"ordered = FALSE",cex=1.5)
-quickAncPlot(tree,ancMPRord,cex=0.3)
-text(x=9,y=15,"ordered = TRUE'",cex=1.5)
+quickAncPlotter(tree,ancMPR,cex=0.3)
+text(x=8,y=15,"ordered char",cex=1.5)
+quickAncPlotter(tree,ancMPRord,cex=0.3)
+text(x=9,y=15,"ordered char'",cex=1.5)
+layout(1)
 
 \donttest{
 # what ancPropStateMat automates (with lots of checks):
